# fsim

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  fsim.qbs  groups  project.config
modules/: modules.qbs  qml-material-deploy.qbs
scripts/: build.sh  build_in_docker.sh  deployqt.py  plot.py  run_experiments.sh  run_in_docker.sh
src/: CMakeLists.txt  CanvasPage.qml  ForceSim.pro  ForcesSimulationApp.qbs  TInteractionFunctions.cpp  TInteractionFunctions.h  TPoint.cpp  TPoint.h  TScreen.cpp  TScreen.h  TSimWorld.cpp  TSimWorld.h  deployment.pri  experiment_runner.h  fsim.qbs  main.cpp  qml.qrc  src.qbs
src/gui/: openglapp.cpp  openglapp.h
src/gui/qml/: CanvasPage.qml  Obstacle.qml  Scene.qml  Sphere.qml  Target.qml  main.qml
src/objects/: TObject.cpp  TObject.h  TObstacle.cpp  TObstacle.h  TSphere.cpp  TSphere.h  TTarget.cpp  TTarget.h
src/qml/: Body.qml  CanvasPage.qml  LabeledTextEdit.qml  PointParametersDialog.qml  Scene.qml  main.qml
submodules/: CMakeLists.txt
submodules/glad/: CMakeLists.txt
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
submodules/imgui/: CMakeLists.txt
